crates/core/tests/proc/ty/empty_unit.rs
use interoptopus::ffi_type;

#[ffi_type]
struct Foo;

fn main() {}
